src/test/ui/cfg-non-opt-expr.stderr
error: removing an expression is not supported in this position
  --> $DIR/cfg-non-opt-expr.rs:15:13
   |
LL |     let _ = #[cfg(unset)] ();
   |             ^^^^^^^^^^^^^

error: removing an expression is not supported in this position
  --> $DIR/cfg-non-opt-expr.rs:17:21
   |
LL |     let _ = 1 + 2 + #[cfg(unset)] 3;
   |                     ^^^^^^^^^^^^^

error: removing an expression is not supported in this position
  --> $DIR/cfg-non-opt-expr.rs:19:23
   |
LL |     let _ = [1, 2, 3][#[cfg(unset)] 1];
   |                       ^^^^^^^^^^^^^

error: aborting due to 3 previous errors

